--- a/nest-upload/package.json
+++ b/nest-upload/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@apollo/federation": "^0.29.0",
     "@apollo/gateway": "^0.35.1",
     "@nestjs/axios": "0.0.1",
     "@nestjs/bull": "^0.4.0",
