--- a/nest-gateway/package.json
+++ b/nest-gateway/package.json
@@ -24,6 +24,7 @@
     "@apollo/federation": "^0.29.0",
     "@apollo/gateway": "^0.38.0",
     "@nestjs/common": "^7.6.15",
+    "@nestjs/config": "^1.0.1",
     "@nestjs/core": "^7.6.15",
     "@nestjs/graphql": "^8.0.2",
     "@nestjs/platform-express": "^7.6.15",
